add search request
